syntax = "proto3";

package pb;

option go_package = "habits.com/habit/pb";

message SubscribeRequest {
    int64 userID = 1; // TODO: This can be remove when implement get user info from grpc request
}

message SubscribeResponse {
    Event event = 1;
}

message NewMessageEvent {
    string conversation_id = 1;
    string message_id = 2;
    string content = 3;
}

message DeleteMessageEvent {
    string conversation_id = 1;
    string message_id = 2;
    string deleted_at = 3;
}

message Event {
    oneof event {
        NewMessageEvent message = 1;
        DeleteMessageEvent delete_message_event = 2;
    }
}

message Close {

}

service ChatService {
    rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}
    rpc BroadcastMessage (Event) returns (Close) {}
}
